Day13/vpc/main.tf
resource "aws_subnet" "public" {
  vpc_id                  = data.aws_vpc.existing.id
  cidr_block              = var.public_subnet_cidr
  availability_zone       = "${var.availability_zone}a"
  map_public_ip_on_launch = true

  tags = merge(var.tags, {
    Name = "jaypal-05-pub-subnet"
  })
}

resource "aws_subnet" "private" {
  vpc_id            = data.aws_vpc.existing.id
  cidr_block        = var.private_subnet_cidr
  availability_zone = "${var.availability_zone}b"

  tags = merge(var.tags, {
    Name = "jaypal-05-priv-subnet"
  })
}

resource "aws_route_table" "public" {
  vpc_id = data.aws_vpc.existing.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = data.aws_internet_gateway.igw.id
  }

  tags = merge(var.tags, {
    Name = "jaypal-05-pub-rt"
  })
}

resource "aws_route_table" "private" {
  vpc_id = data.aws_vpc.existing.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = local.nat_gateway_id
  }

  tags = merge(var.tags, {
    Name = "jaypal-05-priv-rt"
  })
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}
